--- a/stuff.html
+++ b/stuff.html
@@ -9,7 +9,7 @@
   <body>
     <div class="hero">
       <nav>
-        <img src="./img/bluerose.png" class="logo" />
+        <img src="./img/logo.png" class="logo" />
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
